--- a/front/src/app/component/public-profile/public-profile.component.css
+++ b/front/src/app/component/public-profile/public-profile.component.css
@@ -1,39 +1,45 @@
-
-.title{
-    color: var(--main-color);
+.title {
+  color: var(--main-color);
 }
-.chef{
-    width: 50px;
-    padding-bottom: 15px;
-    padding-right: 5px;
+.chef {
+  width: 50px;
+  padding-bottom: 15px;
+  padding-right: 5px;
 }
 
-.recipes-wrapper .card-title{
-    font-size: 24px;
-    color: var(--main-color);
-    font-family: var(--main-font);
+.image-wrapper img {
+  transition: all 0.3s ease;
+}
+
+.image-wrapper img:hover {
+  transform: scale(1.1);
+}
+
+.recipes-wrapper .card-title {
+  font-size: 24px;
+  color: var(--main-color);
+  font-family: var(--main-font);
 }
 
 .related-recipe-category {
-    color: var(--btn-color) !important;
+  color: var(--btn-color) !important;
 }
 
-.related-recipes .time {
-    color: var(--main-color);
+.time {
+  color: var(--main-color);
 }
-
 
 /* Links */
-.links{
-    color: rgb(109 118 126);
-    text-decoration: none;
-    font-weight: 500;
+.links {
+  color: rgb(109 118 126);
+  text-decoration: none;
+  font-weight: 500;
 }
-.links:hover{
-    color: var(--btn-color);
-    text-decoration: underline;
+.links:hover {
+  color: var(--btn-color);
+  text-decoration: underline;
 }
-.link-img{
-    width: 40px;
-    padding-right: 10px;
+.link-img {
+  width: 40px;
+  padding-right: 10px;
 }
