fixing style public profile and profile ,adding bio to user

--- a/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
+++ b/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
@@ -13,7 +13,7 @@
             <img [src]="editForm.get('image')?.value" alt="Recipe Image"  class="img-thumbnail" />
         </div>
         <div class="col-lg-8 formEdit">
-            <form [formGroup]="editForm" (ngSubmit)="editRecipe()" >
+            <form [formGroup]="editForm" enctype="multipart/form-data"  (ngSubmit)="editRecipe()" >
                 <label for="recipeId" class="form-label">image:</label>
                 <input type="text" class="form-control" id="recipeImage" (change)="onImageUpload($event)" accept="image/*" formControlName="image"/>
                 <div class="mb-3 ">
