--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xl sticky-top shadow" [ngStyle]="{ backgroundColor: darkMode ? '#191c24' : 'white'}">
+<nav class="navbar navbar-expand-xl sticky-top shadow-sm" [ngStyle]="{ backgroundColor: darkMode ? '#191c24' : 'white'}">
   <div class="container-fluid">
     <div class="row w-100 align-items-center justify-content-between">
       <a class="nav-link" routerLinkActive="active" routerLink="/about" [ngStyle]="{ color: darkMode ? '#191c24' : 'var(--main-color)'}"></a>
