--- a/front/src/app/component/profile/socials/socials.component.html
+++ b/front/src/app/component/profile/socials/socials.component.html
@@ -14,6 +14,11 @@
             <label for="tiktok_link" class="form-label fs-5"><img src="assets/img/tiktok.png" alt="tiktok" >TikTok</label>
             <input type="text" id="tiktok_link" formControlName="tiktok_link" class="form-control" placeholder="https://www.tiktok.com/">
         </div>
+        <div class="mb-3">
+          <label for="bio" class="form-label fs-5">Bio</label>
+          <textarea id="bio" formControlName="bio" class="form-control" placeholder="Add your Bio"></textarea>
+
+      </div>
         <button type="submit" class="btn text-light px-4 mt-4">Save</button>
       </form>
     </div>
