--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -5,27 +5,30 @@
     <h1 class="text-capitalize fw-bold" style="color: var(--main-color);"><img src="assets/img/chef.png" alt="chef" class="chef"> {{ user?.name }}</h1>
     <a  data-bs-toggle="modal" data-bs-target="#Edit" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i></a>
   </section>
-  
   <section class="mt-5">
     <div class="title d-flex justify-content-between align-items-center">
-      <h1 class="fw-bold text-capitalize"><img src="assets/img/link.png" alt="link" class="chef">Links</h1>
+      <h1 class="text-capitalize m-0 fw-bold" style="color: var(--main-color);"><img src="assets/img/bio.png" alt="chef" class="chef"> Bio</h1>
       <a  data-bs-toggle="modal" data-bs-target="#Socials" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i>
       </a>
     </div>
-    <div class="row d-flex justify-content-center flex-column align-items-center" *ngIf="!user.youtube_link && !user.instagram_link && !user.tiktok_link" >
+    <div class=" d-flex justify-content-center flex-column align-items-center" *ngIf="!user.youtube_link && !user.instagram_link && !user.tiktok_link" >
       <div class="p-3">
         <h3 class="text-center text-secondary ">Add Social links to spread your Magic !!</h3>
       </div>
     </div>
-    <div class="d-flex ">
-      <div *ngIf="user.youtube_link" class="me-4 shadow-sm p-3 rounded">
+    <div style="margin:0px 40px 0px  65px;">
+
+      <p class="text-secondary fs-5 bio " >{{user.bio}}</p>
+    </div>
+    <div class="d-flex  " style="margin-left: 65px;">
+      <div *ngIf="user.youtube_link" class="me-4  rounded">
         <a [href]="user.youtube_link" class="links "><img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube</a>
       </div>
-      <div *ngIf="user.instagram_link" class="me-4 shadow-sm p-3 rounded">
+      <div *ngIf="user.instagram_link" class="me-4   rounded">
         <a [href]="user.instagram_link" class="links "><img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram</a>
       </div>
-      <div *ngIf="user.tiktok_link" class="me-4 shadow-sm p-3 rounded">
-        <a [href]="user.tiktok_link" class="links "><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok</a>
+      <div *ngIf="user.tiktok_link" class="me-4   rounded">
+        <a [href]="user.tiktok_link" class="links "><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">Tiktok</a>
       </div>
     </div>
   </section>
