--- a/front/src/app/component/public-profile/public-profile.component.css
+++ b/front/src/app/component/public-profile/public-profile.component.css
@@ -34,6 +34,13 @@
     text-decoration: underline;
 }
 .link-img{
-    width: 40px;
+    width: 30px;
     padding-right: 10px;
+}
+.bio{
+    margin:0px 40px 5px 27px;
+}
+.bio p{
+    max-width: 100%; 
+    word-wrap: break-word; 
 }
