--- a/front/src/app/component/public-profile/public-profile.component.html
+++ b/front/src/app/component/public-profile/public-profile.component.html
@@ -2,23 +2,33 @@
     <section class="publicProfile-details  my-5">
         <h1 class="fw-bold text-capitalize title">
         <img src="assets/img/chef.png" alt="chef" class="chef">{{ publicProfile?.name }}</h1>
-        
+        <div class="d-flex flex-column" *ngIf="publicProfile.bio">
+          <div class="title px-3  d-flex align-items-center">
+              <p class="fw-bold text-capitalize fs-4 mb-0">
+                <img src="assets/img/bio.png" alt="link" class="link-img">
+                Bio
+              </p>
+            </div>
+            <div class="bio">
+              <p class="text-secondary fs-5 bio p-2 rounded" >{{publicProfile.bio}}</p>
+            </div>
+        </div>
         <div class="d-flex" *ngIf="publicProfile.youtube_link || publicProfile.instagram_link || publicProfile.tiktok_link">
-            <div class="title px-3 me-5 d-flex align-items-center">
+            <div class="title px-3 me-4 d-flex align-items-center">
                 <p class="fw-bold text-capitalize fs-4 mb-0">
                   <img src="assets/img/link.png" alt="link" class="link-img">
                   Links
                 </p>
               </div>
-            <div *ngIf="publicProfile.youtube_link" class="me-4 shadow-sm p-3 rounded">
+            <div *ngIf="publicProfile.youtube_link" class="me-4 shadow-sm px-4 py-2 rounded">
               <a [href]="publicProfile.youtube_link" class="links">
               <img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube </a>
             </div>
-            <div *ngIf="publicProfile.instagram_link" class="me-4 shadow-sm p-3 rounded">
+            <div *ngIf="publicProfile.instagram_link" class="me-4 shadow-sm px-4 py-2 rounded">
               <a [href]="publicProfile.instagram_link" class="links">
               <img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram</a>
             </div>
-            <div *ngIf="publicProfile.tiktok_link" class="me-4 shadow-sm p-3 rounded">
+            <div *ngIf="publicProfile.tiktok_link" class="me-4 shadow-sm px-4 py-2 rounded">
               <a [href]="publicProfile.tiktok_link" class="links">
               <img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok</a>
             </div>
