--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -97,8 +97,9 @@
 <section>
   <div class="container d-flex flex-column w-80">
     <div class="row gx-3 mt-3">
-      <div class="col-lg-3 col-md-6 col-sm-12 white position-relative"  *ngFor="let item of getFilteredRecipes(); let i = index" 
+      <div class="col-lg-3 col-md-6 col-sm-12 white position-relative"  *ngFor="let item of getFilteredRecipes() | paginate: { itemsPerPage: 20, currentPage: p } ; let i = index" 
       (click)="item.user?.role === 'premium' &&  !isPremiumUser() ? premiumRecipeClick() : SingleRecipePage(item.id)"
+      
       >
         <div class="imagehover">
           <img class="rounded-image object-fit-cover" style="width: 100% !important; height: 330px !important;" [src]="item.image" alt="food">
@@ -117,6 +118,10 @@
           <h5>{{item.name}}</h5>
         </div>
       </div>
+    </div>
+    <div class="d-flex justify-content-center my-4">
+
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
   </div>
 </section>
