--- a/front/src/app/component/payment/payment-cancel/payment-cancel.component.html
+++ b/front/src/app/component/payment/payment-cancel/payment-cancel.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex flex-column justify-content-center align-items-center" style="height: 80vh;">
+<div class="container d-flex flex-column justify-content-center align-items-center" style="min-height: 80vh;">
   <h1 class="h1 text-danger-emphasis">looks like something went wrong</h1>
   <h1 class="h3">consider trying again</h1>
   <div class="controls d-flex gap-3 mt-3">
