removed error from admin recipes

--- a/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
+++ b/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
@@ -3,7 +3,7 @@
     <ng-template pTemplate="caption">
         <div class="fs-3 dataName">
             <h1>Recipes</h1>
-            <div routerLink="/admin-add-recipes/{{admin.id}}" style="cursor: pointer;">
+            <div routerLink="/admin-add-recipes/{{admin?.id}}" style="cursor: pointer;">
                 <i class="fa-solid fa-plus"></i>
             </div>
         </div>
