switch the img file to the imgs file

--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -5,21 +5,21 @@
   <div class="row d-flex justify-content-center align-items-center smaller-div">
       <div class="col-lg-1 p-3 col-md-2 col-sm-4 col-9 background   ms-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('breakfast')" [class.selected]="isCategorySelected('breakfast')"  >
 
-          <img src="assets/img/croissant.png" alt="Breakfast" class="img-fluid">
+          <img src="assets/imgs/croissant.png" alt="Breakfast" class="img-fluid">
           <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Breakfast</p>
       </div>
       <div class="col-lg-1 col-md-2 p-3   col-sm-4 col-9 background   ms-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('lunch')" [class.selected]="isCategorySelected('lunch')" >
-          <img src="assets/img/salad.png" alt="Lunch" class="img-fluid">
+          <img src="assets/imgs/salad.png" alt="Lunch" class="img-fluid">
           <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Lunch</p>
       </div>
       <div class="col-lg-1 col-md-2 p-3 col-sm-4 col-9 background   ms-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('dinner')" [class.selected]="isCategorySelected('dinner')"  >
 
-          <img src="assets/img/dinner.png" alt="Dinner" class="img-fluid">
+          <img src="assets/imgs/dinner.png" alt="Dinner" class="img-fluid">
           <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dinner</p>
       </div>
       <div class="col-lg-1 col-md-2 p-3  col-sm-4 col-9 background   ms-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('dessert')" [class.selected]="isCategorySelected('dessert')"  >
 
-        <img src="assets/img/cupcake.png" alt="Dinner" class="img-fluid">
+        <img src="assets/imgs/cupcake.png" alt="Dinner" class="img-fluid">
         <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dessert</p>
     </div>
   </div>
@@ -29,7 +29,7 @@
         <div class="col-lg-2 col-md-3 col-sm-10  sm-div mt-2 ">
             <div class="dropdown d-flex flex-column" >
                 <button (click)="toggleDropdown()" class="btn pink-btn  d-block ">SubCategory 
-                    <img src="assets/img/filter-svgrepo-com.svg" alt="" class="d-inline-block" >
+                    <img src="assets/imgs/filter-svgrepo-com.svg" alt="" class="d-inline-block" >
                     
                 </button>
                 
@@ -40,7 +40,7 @@
         <div class=" col-lg-2 col-md-3 col-sm-10  sm-div mt-2 ">
             <div class="dropdown d-flex flex-column">
                 <button (click)="toggleDropdown2()" class="btn pink-btn">Ingredients
-                    <img src="assets/img/filter-svgrepo-com.svg" alt="" class="d-inline-block">
+                    <img src="assets/imgs/filter-svgrepo-com.svg" alt="" class="d-inline-block">
                 </button>
                 
             </div>
@@ -50,7 +50,7 @@
         <div class=" col-lg-2 col-md-3 col-sm-10  sm-div mt-2">
             <div class="dropdown d-flex flex-column">
                 <button (click)="toggleDropdown3()" class="btn pink-btn  d-block">Time
-                    <img src="assets/img/clock-two-svgrepo-com.svg" alt="" class="d-inline-block">
+                    <img src="assets/imgs/clock-two-svgrepo-com.svg" alt="" class="d-inline-block">
                     
                 </button>
                 
