--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -2,26 +2,26 @@
   <div class="container-fluid">
     <div class="row w-100 align-items-center justify-content-between">
       <a class="nav-link" routerLinkActive="active" routerLink="/about" [ngStyle]="{ color: darkMode ? '#191c24' : 'var(--main-color)'}"></a>
-     
- <!-- Logo Section -->
- <div class="col-4 logomarg col-sm-4 col-md-3 col-lg-3">
-  <div class="navbar-brand logo">
-    <img [src]="logo" alt="Logo" routerLink="" />
-  </div>
-</div>
+    
+      <!-- Logo Section -->
+      <div class="col-4 logomarg col-sm-4 col-md-3 col-lg-3">
+        <div class="navbar-brand logo">
+          <img [src]="logo" alt="Logo" routerLink="" />
+        </div>
+      </div>
 
-<!-- Search Bar -->
-<div class="col-7 col-xl-4 search">
-  <app-search-input></app-search-input>
-</div>
+      <!-- Search Bar -->
+      <div class="col-7 col-xl-4 search">
+        <app-search-input></app-search-input>
+      </div>
 
-<!-- Navbar Toggle Button -->
-<div class="col-lg-1 col-1 col-md-1 col-sm-1 justify-content-end">
-  <button class="navbar-toggler hamburger" type="button" (click)="isCollapsed = !isCollapsed" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" 
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon " [ngStyle]="{ color: darkMode ? 'white' : 'var(--main-color)'}"></span>
-  </button>
-</div>
+      <!-- Navbar Toggle Button -->
+      <div class="col-lg-1 col-1 col-md-1 col-sm-1 justify-content-end">
+        <button class="navbar-toggler hamburger" type="button" (click)="isCollapsed = !isCollapsed" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" 
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon " [ngStyle]="{ color: darkMode ? 'white' : 'var(--main-color)'}"></span>
+        </button>
+      </div>
 
       <!-- Links Section -->
       <div class="col-xl-4 links">
@@ -30,35 +30,35 @@
             <li class="nav-item">
               <a class="nav-link" routerLinkActive="active" routerLink="" [routerLinkActiveOptions]="{ exact: true }"
                 [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/home.png" alt="home" class="chef">
+                <img src="assets/imgs/home.png" alt="home" class="chef">
                 <p>Home</p>
               </a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link" routerLinkActive="active" routerLink="/recipes" [queryParams]="{ reverse: 'true' }" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/recipes.png" alt="recipes" class="chef">
+                <img src="assets/imgs/recipes.png" alt="recipes" class="chef">
                 <p>Recipes</p>
               </a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link" routerLinkActive="active" routerLink="/about" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/about.png" alt="about" class="chef">
+                <img src="assets/imgs/about.png" alt="about" class="chef">
                 <p>About</p>
               </a>
             </li>
 
             <li class="nav-item" *ngIf="isLogged && !admin">
               <a class="nav-link" routerLinkActive="active" routerLink="/profile" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/chef.png" alt="person" class="chef">
+                <img src="assets/imgs/chef.png" alt="person" class="chef">
                 <p>Profile</p>
               </a>
             </li>
 
             <li class="nav-item" *ngIf="isLogged && admin">
               <a class="nav-link" routerLinkActive="active" routerLink="/admin" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/chef.png" alt="person" class="chef">
+                <img src="assets/imgs/chef.png" alt="person" class="chef">
                 <p>Admin</p>
               </a>
             </li>
@@ -66,7 +66,7 @@
             <!-- Login -->
             <li class="nav-item" *ngIf="!isLogged">
               <a class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/login.png" alt="login" class="chef">
+                <img src="assets/imgs/login.png" alt="login" class="chef">
                 <p>Login</p>
               </a>
             </li>
@@ -75,7 +75,7 @@
             <!-- Logout -->
             <li class="nav-item" *ngIf="isLogged">
               <a class="nav-link" (click)="logout()" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/logout.png" alt="logout" class="chef">
+                <img src="assets/imgs/logout.png" alt="logout" class="chef">
                 <p>Logout</p>
               </a>
             </li>
@@ -83,8 +83,8 @@
             <!-- Dark Mode -->
             <li class="nav-item" id="darkMode" (click)="toggleDarkMode()">
               <a class="nav-link" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/dark.png" alt="dark" class="chef" *ngIf="!darkMode" >
-                <img src="assets/img/light.png" alt="dark" class="chef" *ngIf="darkMode">
+                <img src="assets/imgs/dark.png" alt="dark" class="chef" *ngIf="!darkMode" >
+                <img src="assets/imgs/light.png" alt="light" class="chef" *ngIf="darkMode">
                 <p *ngIf="darkMode">Light</p>
                 <p *ngIf="!darkMode">Dark</p>
               </a>
