--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -2,13 +2,13 @@
 
 <div class="container my-5">
   <section class="user-details d-flex justify-content-between align-items-center">
-    <h1 class="text-capitalize fw-bold" style="color: var(--main-color);"><img src="assets/img/chef.png" alt="chef" class="chef"> {{ user?.name }}</h1>
+    <h1 class="text-capitalize fw-bold" style="color: var(--main-color);"><img src="assets/imgs/chef.png" alt="chef" class="chef"> {{ user?.name }}</h1>
     <a  data-bs-toggle="modal" data-bs-target="#Edit" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i></a>
   </section>
   
   <section class="mt-5">
     <div class="title d-flex justify-content-between align-items-center">
-      <h1 class="fw-bold text-capitalize"><img src="assets/img/link.png" alt="link" class="chef">Links</h1>
+      <h1 class="fw-bold text-capitalize"><img src="assets/imgs/link.png" alt="link" class="chef">Links</h1>
       <a  data-bs-toggle="modal" data-bs-target="#Socials" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i>
       </a>
     </div>
@@ -19,20 +19,20 @@
     </div>
     <div class="d-flex ">
       <div *ngIf="user.youtube_link" class="me-4 shadow-sm p-3 rounded">
-        <a [href]="user.youtube_link" class="links"><img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube Link</a>
+        <a [href]="user.youtube_link" class="links"><img src="assets/imgs/youtube.png" alt="youtube" class="link-img">Youtube Link</a>
       </div>
       <div *ngIf="user.instagram_link" class="me-4 shadow-sm p-3 rounded">
-        <a [href]="user.instagram_link" class="links"><img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram Link</a>
+        <a [href]="user.instagram_link" class="links"><img src="assets/imgs/instagram.png" alt="instagram" class="link-img">Instagram Link</a>
       </div>
       <div *ngIf="user.tiktok_link" class="me- shadow-sm p-3 rounded">
-        <a [href]="user.tiktok_link" class="links"><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok Link</a>
+        <a [href]="user.tiktok_link" class="links"><img src="assets/imgs/tiktok.png" alt="tiktok" class="link-img">TikTok Link</a>
       </div>
     </div>
   </section>
   
   <section class="recipes-wrapper mt-5">
     <div class="title">
-      <h1 class="fw-bold text-capitalize"><img src="assets/img/heart.png" alt="chef" class="chef">your favorite recipes</h1>
+      <h1 class="fw-bold text-capitalize"><img src="assets/imgs/heart.png" alt="chef" class="chef">your favorite recipes</h1>
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-auto"  *ngIf="user?.recipes_saves.length > 0">
       <div *ngFor="let recipe of user?.recipes_saves">
@@ -65,7 +65,7 @@
   <section class="recipes-wrapper mt-5" *ngIf="isPremium">
     <div class="title d-flex justify-content-between align-items-center">
       <h1 class="fw-bold text-capitalize">
-      <img src="assets/img/sand.png" alt="chef" class="chef">Waiting for Aproval</h1>
+      <img src="assets/imgs/sand.png" alt="chef" class="chef">Waiting for Aproval</h1>
       
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-auto" *ngIf="user.pending_recipes.length!=0">
@@ -106,7 +106,7 @@
   </section>
   <section class="recipes-wrapper mt-5" *ngIf="isPremium">
     <div class="title d-flex justify-content-between align-items-center">
-      <h1 class="fw-bold text-capitalize"><img src="assets/img/magic.png" alt="chef" class="chef">your magic</h1>
+      <h1 class="fw-bold text-capitalize"><img src="assets/imgs/magic.png" alt="chef" class="chef">your magic</h1>
       <a routerLink="/add-recipe/{{ user.id }}" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-auto" *ngIf="user.recipes.length!=0">
@@ -130,12 +130,7 @@
       </div>
     </div>
     <div class="row d-flex justify-content-center">
-      <!-- <div *ngIf="user.recipes.length==0 " class="col-lg-2 col-m-3 col-sm-3 col-4">
-      
-        <img src="assets/img/empty-box_4826310.png" alt="empty" class="w-100">
-      </div> -->
       <div class="p-5"  *ngIf="user.recipes.length==0">
-
         <h3 class="text-center text-secondary p-5">Share your culinary magic with us and get featured on our website! Send your favorite recipe  !!</h3>
       </div>
     </div>
