--- a/front/src/app/component/public-profile/public-profile.component.html
+++ b/front/src/app/component/public-profile/public-profile.component.html
@@ -1,33 +1,33 @@
 <section class="container">
     <section class="publicProfile-details  my-5">
         <h1 class="fw-bold text-capitalize title">
-        <img src="assets/img/chef.png" alt="chef" class="chef">{{ publicProfile?.name }}</h1>
+        <img src="assets/imgs/chef.png" alt="chef" class="chef">{{ publicProfile?.name }}</h1>
         
         <div class="d-flex" *ngIf="publicProfile.youtube_link || publicProfile.instagram_link || publicProfile.tiktok_link">
             <div class="title px-3 me-5 d-flex align-items-center">
                 <p class="fw-bold text-capitalize fs-4 mb-0">
-                  <img src="assets/img/link.png" alt="link" class="link-img">
+                  <img src="assets/imgs/link.png" alt="link" class="link-img">
                   Links
                 </p>
               </div>
             <div *ngIf="publicProfile.youtube_link" class="me-4 shadow-sm p-3 rounded">
               <a [href]="publicProfile.youtube_link" class="links">
-              <img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube </a>
+              <img src="assets/imgs/youtube.png" alt="youtube" class="link-img">Youtube </a>
             </div>
             <div *ngIf="publicProfile.instagram_link" class="me-4 shadow-sm p-3 rounded">
               <a [href]="publicProfile.instagram_link" class="links">
-              <img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram</a>
+              <img src="assets/imgs/instagram.png" alt="instagram" class="link-img">Instagram</a>
             </div>
             <div *ngIf="publicProfile.tiktok_link" class="me-4 shadow-sm p-3 rounded">
               <a [href]="publicProfile.tiktok_link" class="links">
-              <img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok</a>
+              <img src="assets/imgs/tiktok.png" alt="tiktok" class="link-img">TikTok</a>
             </div>
           </div>
     </section>
 
       <section class="recipes-wrapper my-5" >
         <div class="title d-flex justify-content-between align-items-center">
-          <h1 class="fw-bold text-capitalize"><img src="assets/img/recipe.png" alt="recipe" class="chef">Other Recipes of this User</h1>
+          <h1 class="fw-bold text-capitalize"><img src="assets/imgs/recipe.png" alt="recipe" class="chef">Other Recipes of this User</h1>
         </div>
         <div class="body mt-3 d-flex gap-3 overflow-x-scroll">
             <div *ngFor="let recipe of publicProfile?.recipes">
