--- a/front/src/app/component/profile/socials/socials.component.html
+++ b/front/src/app/component/profile/socials/socials.component.html
@@ -3,15 +3,15 @@
       <p class="fw-bold mb-4 col-12">Links</p>
       <form [formGroup]="LinksForm" (ngSubmit)="Link()">
         <div class="mb-3">
-          <label for="youtube_link" class="form-label fs-5"><img src="assets/img/youtube.png" alt="youtube" >Youtube</label>
+          <label for="youtube_link" class="form-label fs-5"><img src="assets/imgs/youtube.png" alt="youtube" >Youtube</label>
           <input type="text" id="youtube_link" formControlName="youtube_link" class="form-control" placeholder="https://www.youtube.com/">
         </div>
         <div class="mb-3">
-            <label for="instagram_link" class="form-label fs-5"><img src="assets/img/instagram.png" alt="instagram" >Instagram</label>
+            <label for="instagram_link" class="form-label fs-5"><img src="assets/imgs/instagram.png" alt="instagram" >Instagram</label>
             <input type="text" id="instagram_link" formControlName="instagram_link" class="form-control" placeholder="https://www.instagram.com/">
         </div>
         <div class="mb-3">
-            <label for="tiktok_link" class="form-label fs-5"><img src="assets/img/tiktok.png" alt="tiktok" >TikTok</label>
+            <label for="tiktok_link" class="form-label fs-5"><img src="assets/imgs/tiktok.png" alt="tiktok" >TikTok</label>
             <input type="text" id="tiktok_link" formControlName="tiktok_link" class="form-control" placeholder="https://www.tiktok.com/">
         </div>
         <div class="mb-3">
