--- a/front/src/app/component/about/about.component.html
+++ b/front/src/app/component/about/about.component.html
@@ -1,7 +1,9 @@
 
-<section class="container mt-2 mb-5 px-5">
-  <app-top-dish-area title="Welcome to My Daily Recipes!!" style="margin-top: -80px;"></app-top-dish-area>
-  <!-- Overview section with a dynamic border color depending on dark mode -->
+<section class="container my-5 px-5">
+  <div class="topDish my-5">
+    <app-top-dish-area title="Welcome to My Daily Recipes!!"></app-top-dish-area>
+  </div>
+
   <div
     style="background-color: var(--main-color)"
     class="text-light p-4 overview-section"
