--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -3,7 +3,7 @@
     class="user-details d-flex justify-content-between align-items-center"
   >
     <h1 class="text-capitalize fw-bold" style="color: var(--main-color)">
-      <img src="s/imgs/chef.png" alt="chef" class="chef" /> {{ user?.name }}
+      <img src="assets/imgs/chef.png" alt="chef" class="chef" /> {{ user?.name }}
     </h1>
     <a
       data-bs-toggle="modal"
@@ -15,30 +15,43 @@
 
   <section class="mt-5">
     <div class="title d-flex justify-content-between align-items-center">
-      <h1 class="text-capitalize m-0 fw-bold" style="color: var(--main-color);"><img src="assets/imgs/bio.png" alt="chef" class="chef"> Bio</h1>
-      <a  data-bs-toggle="modal" data-bs-target="#Socials" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i>
+      <h1 class="text-capitalize m-0 fw-bold" style="color: var(--main-color);">
+        <img src="assets/imgs/bio.png" alt="chef" class="chef"> Bio</h1>
+        <a data-bs-toggle="modal" data-bs-target="#Socials" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i>
       </a>
     </div>
-    <div class=" d-flex justify-content-center flex-column align-items-center" *ngIf="!user.youtube_link && !user.instagram_link && !user.tiktok_link" >
+
+    <div class=" d-flex justify-content-center flex-column align-items-center"
+     *ngIf="!user.youtube_link && !user.instagram_link && !user.tiktok_link && !user.bio" >
       <div class="p-3">
         <h3 class="text-center text-secondary">
           Add Social links to spread your Magic !!
         </h3>
       </div>
     </div>
-    <div style="margin:0px 40px 0px  65px;">
 
+    <div style="margin:0px 40px 0px  65px;">
       <p class="text-secondary fs-5 bio " >{{user.bio}}</p>
     </div>
+
     <div class="d-flex  " style="margin-left: 65px;">
-      <div *ngIf="user.youtube_link" class="me-4  rounded">
-        <a [href]="user.youtube_link" class="links "><img src="assets/imgs/youtube.png" alt="youtube" class="link-img">Youtube</a>
+      <div *ngIf="user.youtube_link" class="me-4 rounded">
+        <a [href]="user.youtube_link" class="links">
+          <img src="assets/imgs/youtube.png" alt="youtube" class="link-img">
+          Youtube
+        </a>
       </div>
-      <div *ngIf="user.instagram_link" class="me-4   rounded">
-        <a [href]="user.instagram_link" class="links "><img src="assets/imgs/instagram.png" alt="instagram" class="link-img">Instagram</a>
+      <div *ngIf="user.instagram_link" class="me-4 rounded">
+        <a [href]="user.instagram_link" class="links">
+          <img src="assets/imgs/instagram.png" alt="instagram" class="link-img">
+          Instagram
+        </a>
       </div>
-      <div *ngIf="user.tiktok_link" class="me-4   rounded">
-        <a [href]="user.tiktok_link" class="links "><img src="assets/imgs/tiktok.png" alt="tiktok" class="link-img">Tiktok</a>
+      <div *ngIf="user.tiktok_link" class="me-4 rounded">
+        <a [href]="user.tiktok_link" class="links">
+          <img src="assets/imgs/tiktok.png" alt="tiktok" class="link-img">
+          Tiktok
+        </a>
       </div>
     </div>
   </section>
