--- a/front/src/app/component/public-profile/public-profile.component.html
+++ b/front/src/app/component/public-profile/public-profile.component.html
@@ -38,7 +38,7 @@
     <section class="recipes-wrapper my-5">
       <div class="title d-flex justify-content-between align-items-center">
         <h1 class="fw-bold text-capitalize">
-          <img src="assets/img/recipe.png" alt="recipe" class="chef" />Other
+          <img src="assets/imgs/recipe.png" alt="recipe" class="chef" />Other
           Recipes of this User
         </h1>
       </div>
