--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -1,3 +1,4 @@
+
 /* Navbar styles */
 .navbar {
   padding: 0 70px; 
@@ -118,6 +119,7 @@ li {
 
   /* Center the search bar on small screens */
   .search {
+    margin-left: 40px;
     padding: 0px;
     /* display: flex;
     justify-content: center;
@@ -180,3 +182,6 @@ li {
     display: none;
   }
 }
+
+
+
